feat: add application

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>KbdGenerator</title>
+  <title>Kbd Generator - Quickly generate kbd tags by keyboard shortcuts</title>
+  <meta name="description" content="Generate kbd tags for your keyboard shortcuts, For github, stackoverflow, markdown">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
